syntax = "proto3";

package proto.messaging;

service Messaging {
	rpc Call(MessagingRequest) returns (MessagingResponse) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message MessagingRequest {
	string name = 1;
}

message MessagingResponse {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
